# pixelcakes

./: Application.hs  Foundation.hs  Home.hs  Main.hs  README.md  client_session_key.aes  pixelcakes.cabal  routes
Handler/: Contato.hs  Produtos.hs  Servicos.hs  Usuario.hs
messages/: en.msg  pt-br.msg  pt.msg
static/css/: main.css
static/js/: main.js
templates/: about.hamlet  contact.hamlet  footer.hamlet  gallery.hamlet  intro.hamlet  nav.hamlet  nav2.hamlet  parallax.hamlet  price.hamlet  products.hamlet  services.hamlet  services2.hamlet  tableProduto.hamlet
