name:               pixelcakes
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          pixelcakes
    main-is:            Main.hs
  
    ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N

    build-depends:  base
                    , yesod
                    , yesod-static
                    , text                          
                    , persistent                    
                    , persistent-postgresql
                    , monad-logger

    other-modules:    Application,
                      Foundation,
                      Handler.Produtos,
                      Handler.Servicos,
                      Handler.Usuario,
                      Handler.Contato
